--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,18 +1,24 @@
 $bg-color: #FFF;
+$color-primary: #242F43;
+$color-secondary: #858B96;
+$color-tertiary: #E7EAEE;
 
-$btn-primary-bg: #2EA2F8;
-$btn-primary-border: #2A94E2;
-$btn-primary-text: #FFF;
+$color-primary-bg: #2EA2F8;
+$color-primary-border: #2A94E2;
+$color-primary-text: #FFF;
 
-$btn-success-bg: #00B377;
-$btn-success-border: #00A36D;
-$btn-success-text: #FFF;
+$color-success-bg: #00B377;
+$color-success-border: #00A36D;
+$color-success-text: #FFF;
 
-$btn-warning-bg: #FFA900;
-$btn-warning-border: #DF9613;
-$btn-warning-text: #4B3200;
+$color-warning-bg: #FFA900;
+$color-warning-border: #DF9613;
+$color-warning-text: #4B3200;
 
-$btn-alert-bg: #E6272E;
-$btn-alert-border: #D2242A;
-$btn-alert-text: #FFF;
+$color-alert-bg: #E6272E;
+$color-alert-border: #D2242A;
+$color-alert-text: #FFF;
 
+$color-cancel-bg: #FFF;
+$color-cancel-border: #D3D9DF;
+$color-cancel-text: #242F43;
